实现bladex   token  redis缓存

--- a/项目构建历史.md
+++ b/项目构建历史.md
@@ -36,6 +36,31 @@
 - 最小化修改，降低集成风险
 - BladeX用户享有与普通登录用户相同的体验
 
+### 2024-07-05 实现BladeX令牌管理
+
+实现了完整的BladeX令牌管理机制，支持以下功能：
+
+1. 将用户的BladeX令牌与若依用户ID绑定存储在Redis中
+2. 提供令牌管理器BladeTokenManager，负责令牌的存储、获取和删除
+3. 实现BladeX API调用客户端，支持使用用户令牌调用BladeX API
+4. 在用户登录成功时自动保存BladeX令牌
+5. 提供测试接口，用于验证令牌状态和调用BladeX API
+
+主要组件：
+- BladeToken：存储用户的BladeX令牌信息
+- BladeTokenManager：管理令牌的存储、获取和删除
+- BladeApiClient：用于调用BladeX API的客户端
+- BladeApiController：提供BladeX API调用相关接口
+
+整个令牌管理流程如下：
+1. 用户通过BladeX认证并获取授权码
+2. 授权码传递到后端，获取BladeX访问令牌
+3. 用户在若依系统中成功登录后，将BladeX令牌与用户ID绑定存储在Redis
+4. 调用BladeX API时，从Redis获取对应用户的令牌并添加到请求头
+5. 令牌过期时，通过接口通知用户重新登录
+
+这种设计保证了每个用户的BladeX令牌互相隔离，并且与用户会话生命周期保持一致。当令牌过期或用户登出时，相应的BladeX令牌也会被清除。
+
 ## 问题修复
 
 ### 2024-07-04 修复BladeX认证接口访问权限问题
