实现岗位的获取，确定同步方案

--- a/项目构建历史.md
+++ b/项目构建历史.md
@@ -135,3 +135,20 @@ blade:
 4. 在`handleLoginSuccess`方法中添加日志，跟踪token传递过程
 
 修改后的代码更健壮，能够处理多种响应数据结构，确保在任何情况下都能正确提取token。
+
+## 2023年10月15日 添加BladeX API基础客户端
+- 实现了BladeX API调用的基础功能，包括令牌管理和用户信息获取
+
+## 2023年10月20日 添加BladeX用户列表同步功能
+- 增加了BladeX用户列表查询接口
+- 开发了用户数据同步的前端界面
+
+## 2023年11月5日 添加Basic认证
+- 在BladeX API客户端中添加了Basic认证头
+- 配置了客户端ID和密钥的注入
+
+## 2023年11月7日 添加BladeX岗位列表查询功能
+- 在BladeApiClient中增加了获取岗位列表的方法
+- 在控制器中添加了岗位列表接口
+- 开发了岗位列表查询的前端界面
+- 支持根据岗位名称、编号和类型进行查询和分页
