实现部门的获取

--- a/项目构建历史.md
+++ b/项目构建历史.md
@@ -152,3 +152,18 @@ blade:
 - 在控制器中添加了岗位列表接口
 - 开发了岗位列表查询的前端界面
 - 支持根据岗位名称、编号和类型进行查询和分页
+
+## 2023年11月8日 添加BladeX部门列表查询功能
+- 在BladeApiClient中增加了获取部门列表的方法
+- 在控制器中添加了部门列表接口
+- 开发了部门列表查询的前端界面
+- 使用树形结构展示部门的层级关系
+- 通过标签标识部门的状态和类型
+
+## 2023年11月9日 优化BladeX部门列表界面
+- 将部门列表展示优化为左右分栏布局
+- 左侧为部门树形结构，方便浏览整体组织架构
+- 右侧为当前选中部门的详细信息
+- 详情中显示部门ID、名称、全称、类型、状态、上级部门等信息
+- 自动高亮当前选中的部门节点
+- 添加滚动条以支持大量部门数据的浏览
