--- a/项目构建历史.md
+++ b/项目构建历史.md
@@ -61,6 +61,30 @@
 
 这种设计保证了每个用户的BladeX令牌互相隔离，并且与用户会话生命周期保持一致。当令牌过期或用户登出时，相应的BladeX令牌也会被清除。
 
+### 2024-07-08 功能添加：实现BladeX岗位同步
+
+#### 功能描述
+添加了从BladeX系统同步岗位数据到若依系统的功能，包括：
+
+1. 后端服务层新增岗位同步方法，支持批量处理BladeX岗位数据
+   - 在`ISysPostService`接口中新增`syncBladePost`方法
+   - 在`SysPostServiceImpl`中实现同步逻辑，支持新增和更新岗位信息
+   - 岗位状态与类型的映射转换处理
+
+2. 控制层添加岗位同步接口
+   - 在`SysPostController`中新增`/syncBladePost`接口，接收BladeX岗位数据并调用服务层方法处理
+
+3. 前端功能实现
+   - 在API请求文件中添加岗位同步方法`syncBladePostToRuoyi`
+   - 在BladeX接口测试页面添加岗位同步按钮和处理逻辑
+   - 完善同步过程中的用户交互和错误处理机制
+
+#### 技术要点
+- 使用事务管理确保数据一致性
+- 实现岗位类型与备注的映射关系
+- 通过岗位编码判断记录是否存在，决定更新还是新增
+- 前端添加友好的用户提示和错误处理机制
+
 ## 问题修复
 
 ### 2024-07-04 修复BladeX认证接口访问权限问题
